--- a/#source/scss/pages/about_me/main_about_me.scss
+++ b/#source/scss/pages/about_me/main_about_me.scss
@@ -1,4 +1,4 @@
-.mainBox {
+.mainBox_aboutMe {
 	display: flex;
 	flex: 1 1 auto;
 	background: url(../../../../img/about_me/bg.jpg) center/ cover no-repeat fixed;
