--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -10,6 +10,8 @@
 @import "pages/about_me/main_about_me.scss";
 //------thank you-----//
 @import "pages/thank_you/main_thank_you.scss";
+//-----games----//
+@import "pages/games/main_games.scss";
 
 body{
 }
