--- a/#source/scss/pages/about_me/main_about_me.scss
+++ b/#source/scss/pages/about_me/main_about_me.scss
@@ -14,10 +14,9 @@
 		.content {
 			display: flex;
 			justify-content: center;
-			vertical-align: middle;
 			align-items: center;
 			.box {
-				margin-top: 250px;
+				margin-top: 100px;
 				width: 500px;
 				display: flex;
 				justify-content: center;
@@ -32,8 +31,8 @@
 					display: flex;
 				}
 				img {
-					max-width: 250px;
-					max-height: 250px;
+					width: 250px;
+					height: 250px;
 					filter: drop-shadow(3px 3px 10px #000);
 				}
 			}
@@ -42,22 +41,78 @@
 				background: rgb(255, 255, 255, 0.2);
 				font-family: 'B52 Regular';
 				flex-direction: column;
-				padding: 10px;
+				padding: 15px;
 			}
 			.img {
 
 			}
 			}
+		.wrapperSliderContent {
+			flex-direction: column;
+			margin: 50px 0 50px 0;
+			.btn_slider{
+				opacity: 0.4;
+				margin: 0 40px 0 40px;
+				&:hover {
+					opacity: 0.8;
+					filter: drop-shadow(1px 1px 5px black);
+				}
+			}
+
+			.slider_skills_text {
+				font-size: 40px;
+				margin: 20px 0 50px 0;
+				text-transform: uppercase;
+				font-family: 'B52 Regular';
+				background: rgb(255, 255, 255, 0.2);
+				padding: 4px 15px;
+			}
+				.slider {
+					max-width: 720px;
+					overflow: hidden;
+					border: 1px solid rgb(0, 0, 0, 0.2);
+
+					.string {
+						margin-left: 720px;
+						max-width: 1440px;
+						position: relative;
+						left: 0;
+						transition: all ease 1s;
+						img {
+							max-width: 180px;
+							max-height: 180px;
+							&:hover {
+								transform: scale(1.1);
+								filter: drop-shadow(1px 1px 10px black);
+							}
+						}
+					}
+				}
+			}
 		}
 }
+.content_desk {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+
+
 
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
 	.content {
 			flex-direction: column-reverse;
 			justify-content: center;
+			.text {
+				padding: 40px;
+			}
 		img {
-			margin-bottom: -30%;
+			margin-bottom: 10px;
 		}
+	}
+	.btn_slider{
+		display: none;
 	}
 }
