--- a/css/style.css
+++ b/css/style.css
@@ -293,7 +293,7 @@ h1, h2, h3, h4, h5, h6 {
   .types_of_layout:hover {
     background: black;
     transform: scale(1.3);
-    transition: 1s;
+    transition: ease-in 0.3s;
     color: #06bad1;
     border: 1px solid #a19fff;
   }
@@ -503,11 +503,10 @@ h1, h2, h3, h4, h5, h6 {
 .mainBox_aboutMe .contentBox .content {
   display: flex;
   justify-content: center;
-  vertical-align: middle;
   align-items: center;
 }
 .mainBox_aboutMe .contentBox .content .box {
-  margin-top: 250px;
+  margin-top: 100px;
   width: 500px;
   display: flex;
   justify-content: center;
@@ -523,23 +522,77 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
 }
 .mainBox_aboutMe .contentBox .content .box img {
-  max-width: 250px;
-  max-height: 250px;
+  width: 250px;
+  height: 250px;
   filter: drop-shadow(3px 3px 10px #000);
 }
 .mainBox_aboutMe .contentBox .content .text {
   background: rgba(255, 255, 255, 0.2);
   font-family: "B52 Regular";
   flex-direction: column;
-  padding: 10px;
+  padding: 15px;
 }
+.mainBox_aboutMe .contentBox .wrapperSliderContent {
+  flex-direction: column;
+  margin: 50px 0 50px 0;
+}
+.mainBox_aboutMe .contentBox .wrapperSliderContent .btn_slider {
+  opacity: 0.4;
+  margin: 0 40px 0 40px;
+}
+.mainBox_aboutMe .contentBox .wrapperSliderContent .btn_slider:hover {
+  opacity: 0.8;
+  filter: drop-shadow(1px 1px 5px black);
+}
+.mainBox_aboutMe .contentBox .wrapperSliderContent .slider_skills_text {
+  font-size: 40px;
+  margin: 20px 0 50px 0;
+  text-transform: uppercase;
+  font-family: "B52 Regular";
+  background: rgba(255, 255, 255, 0.2);
+  padding: 4px 15px;
+}
+.mainBox_aboutMe .contentBox .wrapperSliderContent .slider {
+  max-width: 720px;
+  overflow: hidden;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+}
+.mainBox_aboutMe .contentBox .wrapperSliderContent .slider .string {
+  margin-left: 720px;
+  max-width: 1440px;
+  position: relative;
+  left: 0;
+  transition: all ease 1s;
+}
+.mainBox_aboutMe .contentBox .wrapperSliderContent .slider .string img {
+  max-width: 180px;
+  max-height: 180px;
+}
+.mainBox_aboutMe .contentBox .wrapperSliderContent .slider .string img:hover {
+  transform: scale(1.1);
+  filter: drop-shadow(1px 1px 10px black);
+}
+
+.content_desk {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
   .content {
     flex-direction: column-reverse;
     justify-content: center;
   }
+  .content .text {
+    padding: 40px;
+  }
   .content img {
-    margin-bottom: -30%;
+    margin-bottom: 10px;
+  }
+
+  .btn_slider {
+    display: none;
   }
 }
 .box_thanks {
@@ -661,6 +714,24 @@ h1, h2, h3, h4, h5, h6 {
   display: none;
 }
 
+@media only screen and (max-width: 1224px) {
+  .conditions_game {
+    font-size: 20px;
+    margin: 0 auto;
+    max-width: 700px;
+    color: red;
+  }
+
+  .result_attempt_games {
+    flex-direction: column-reverse;
+  }
+  .result_attempt_games .result {
+    margin-top: 20px;
+    margin-bottom: -20px;
+    margin-left: 80px;
+    justify-content: center;
+  }
+}
 @font-face {
   font-family: "B52 Regular";
   src: url("../../fonts/B52 Regular.eot");
