--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ h1, h2, h3, h4, h5, h6 {
 .fullscreen_Block_1 {
   display: flex;
   width: 100%;
-  background: url(../../../img/bg/bg1.jpg) center/cover no-repeat fixed;
+  background: url(../img/bg/bg1.jpg) center/cover no-repeat fixed;
   flex-direction: column;
 }
 .fullscreen_Block_1 .Block_1 {
@@ -220,7 +220,7 @@ h1, h2, h3, h4, h5, h6 {
 .fullscreen_Block_2 {
   display: flex;
   width: 100%;
-  background-image: url(../../../img/bg/bg2.jpg);
+  background-image: url(../img/bg/bg2.jpg);
 }
 .fullscreen_Block_2 .Block_2 {
   flex: 1 1 auto;
@@ -488,7 +488,7 @@ h1, h2, h3, h4, h5, h6 {
 .mainBox_aboutMe {
   display: flex;
   flex: 1 1 auto;
-  background: url(../../../../img/about_me/bg.jpg) center/cover no-repeat fixed;
+  background: url(../img/about_me/bg.jpg) center/cover no-repeat fixed;
   width: 100%;
   max-height: 100vh;
 }
